edited index.html file

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Hello World!!</h1>
+    <h1>This is my final VCC assignment</h1>
 </body>
 </html>
